# BytescribeTeam

./: .gitignore  HighlightsTable.tsx  README.md
api/: requirements.txt  template.yaml
aws-lambda-crawler/: .gitignore  BEDROCK_SUMMARIZATION.md  README.md  debug_image_fetch.py  debug_title_extraction.py  diagnose_s3_images.py  handler.py  local_runner.py  packaged.yaml  pyproject.toml  samconfig.toml  smoke_run.py  template.yaml  test_bedrock_integration.sh  test_parser.py  test_s3_upload.py
aws-lambda-crawler/.aws-sam/: build.toml
aws-lambda-crawler/app/: constants.py
aws-lambda-crawler/app/core/: config.py
aws-lambda-crawler/app/utils/bedrock/: bedrock_runtime.py  gen_captions.py
aws-lambda-crawler/crawler/: __init__.py  fetcher.py  parser.py  processor.py  secrets.py  summarizer.py
aws-lambda-crawler/react-client/: .env.example  README.md  index.html  package-lock.json  package.json
aws-lambda-crawler/react-client/src/: App.jsx  main.jsx  style.css
aws-lambda-crawler/scripts/: run_webapp.sh  test_deploy.sh
aws-lambda-crawler/tests/: test_handler_media_upload.py  test_handler_no_resources.py  test_handler_s3_fail.py  test_parser.py  test_secrets.py
aws-lambda-crawler/webapp/: README.md  __init__.py  app.py  pyproject.toml  requirements.txt
aws-lambda-crawler/webapp/templates/: index.html
bytescribe-app/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
elevenlabs-poc/: .example.env  Makefile  README.md  lambda.yaml  main.py  requirements.txt
moviepy_poc/: create_video.py  requirements.txt
(+41 files in other folders)
